# eeg-sigmanova

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: train_cbramod.yaml  train_eegsimpleconv.yaml
configs/data/: shu_mi.yaml
configs/model/: cbramod.yaml  eeg_simple_conv.yaml
configs/training/: cbramod.yaml  eeg_simple_conv.yaml
eeg_sigmanova/: __init__.py  constant.py  utils.py
eeg_sigmanova/data/: __init__.py  dataset.py  preprocessing.py
eeg_sigmanova/models/: __init__.py  cbramod.py  cbramod_classifier.py  criss_cross_transformer.py  eeg_simple_conv.py
eeg_sigmanova/training/: __init__.py  evaluator.py  trainer.py
scripts/: reproduce_shu_mi.ipynb  reproduce_shu_mi_combined.ipynb  train_cbramod.py  train_eegsimpleconv.py
tests/: test_models.py
